# StudentCopilotAiservice

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yaml
.project/: spec.yaml
code/: Controller.py  Grader.py  MainController.py  NoteGenerator.py  PromptValidator.py
code/tests/: ControllerTest.py
studentcopilotaiservice/tests/: MainControllerTests.py
