[tool.poetry]
name = "studentcopilotaiservice"
version = "0.1.0"
description = ""
authors = ["Yassir, Aimen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.4.0"
appnope = "0.1.4"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.16.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
click = "8.1.7"
comm = "0.2.2"
debugpy = "1.8.5"
decorator = "4.4.2"
defusedxml = "0.7.1"
executing = "2.1.0"
fastapi = "0.113.0"
fastjsonschema = "2.20.0"
fqdn = "1.5.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
idna = "3.8"
imageio = "2.35.1"
imageio-ffmpeg = "0.5.1"
ipykernel = "6.29.5"
ipython = "8.27.0"
isoduration = "20.11.0"
jedi = "0.19.1"
Jinja2 = "3.1.4"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.2"
jupyter_core = "5.7.2"
jupyter_server = "2.14.2"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.2.5"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
MarkupSafe = "2.1.5"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
moviepy = "1.0.3"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
notebook_shim = "0.2.4"
numpy = "2.1.1"
overrides = "7.7.0"
packaging = "24.1"
pandocfilters = "1.5.1"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.2.2"
proglog = "0.1.10"
prometheus_client = "0.20.0"
prompt_toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
pycparser = "2.22"
pydantic = "2.9.0"
pydantic_core = "2.23.2"
Pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "2.0.7"
python-multipart = "0.0.9"
PyYAML = "6.0.2"
pyzmq = "26.2.0"
referencing = "0.35.1"
requests = "2.32.3"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.20.0"
Send2Trash = "1.8.3"
setuptools = "74.1.2"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
stack-data = "0.6.3"
starlette = "0.38.4"
terminado = "0.18.1"
tinycss2 = "1.3.0"
tornado = "6.4.1"
tqdm = "4.66.5"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20240821"
typing_extensions = "4.12.2"
tzdata = "2024.1"
uri-template = "1.3.0"
urllib3 = "2.2.2"
uvicorn = "0.30.6"
wcwidth = "0.2.13"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
